src/objects/Apttus_Config2__GLAccountMapRule__c.object
<CustomObject>
    <description>Represents a G/L account map rule to determine G/L account numbers for a product or service</description>
    <fields>
        <fullName>Apttus_Config2__BaseGLAccountId__c</fullName>
        <description>The base G/L account Id</description>
        <inlineHelpText>The base G/L account Id</inlineHelpText>
        <label>Base G/L Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseGLAccountName__c</fullName>
        <description>The base G/L account name</description>
        <inlineHelpText>The base G/L account name</inlineHelpText>
        <label>Base G/L Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseGLAccountNumber__c</fullName>
        <description>The base G/L account number</description>
        <inlineHelpText>The base G/L account number</inlineHelpText>
        <label>Base G/L Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the rule</description>
        <inlineHelpText>The description for the rule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the first dimension.</description>
        <inlineHelpText>ID of the first dimension.</inlineHelpText>
        <label>Dimension 1</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipName>GLAccountMappingRulesDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1ValueType__c</fullName>
        <description>The value type of the first dimension</description>
        <inlineHelpText>The value type of the first dimension</inlineHelpText>
        <label>Dimension 1 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the second dimension</description>
        <inlineHelpText>ID of the second dimension</inlineHelpText>
        <label>Dimension 2</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipName>GLAccountMappingRulesDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2ValueType__c</fullName>
        <description>The value type of the second dimension</description>
        <inlineHelpText>The value type of the second dimension</inlineHelpText>
        <label>Dimension 2 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the third dimension</description>
        <inlineHelpText>ID of the third dimension</inlineHelpText>
        <label>Dimension 3</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipName>GLAccountMappingRulesDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3ValueType__c</fullName>
        <description>The value type of the third dimension</description>
        <inlineHelpText>The value type of the third dimension</inlineHelpText>
        <label>Dimension 3 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GLAccountType__c</fullName>
        <description>The G/L account type</description>
        <inlineHelpText>The G/L account type</inlineHelpText>
        <label>G/L Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable Account</fullName>
                </value>
                <value>
                    <fullName>Deferred Revenue Account</fullName>
                </value>
                <value>
                    <fullName>Recognized Revenue Account</fullName>
                </value>
                <value>
                    <fullName>Unbilled A/R Account</fullName>
                </value>
                <value>
                    <fullName>Unbilled Deferred Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberOfEntries__c</fullName>
        <description>Indicates the number of entries associated with the mapping rule</description>
        <inlineHelpText>Indicates the number of entries associated with the mapping rule</inlineHelpText>
        <label>Number Of Entries</label>
        <summaryForeignKey>Apttus_Config2__GLAccountMapEntry__c.Apttus_Config2__MapRuleId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>G/L Account Map Rule</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G/L Account Map Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>